--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,5 @@
 {
-    "workbench.colorTheme": "Pop N' Lock Theme by Luxcium ✨",
-    "workbench.iconTheme": "material-icon-theme",
+    "workbench.colorTheme": "Gruvbox Material Soft Dark",
     "workbench.startupEditor": "newUntitledFile",
     "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
     "explorer.confirmDragAndDrop": false,
@@ -30,11 +29,12 @@
     "workbench.statusBar.visible": true,
     "workbench.editor.showTabs": true,
     "workbench.sideBar.location": "left",
+    "workbench.editor.enablePreview": false,
     "explorer.openEditors.visible": 5,
     "explorer.sortOrder": "type",
     "terminal.integrated.fontFamily": "Fira Code",
     "terminal.integrated.letterSpacing": 1,
-    "terminal.integrated.fontSize": 18,
+    "terminal.integrated.fontSize": 16,
     "terminal.integrated.cursorStyle": "block",
     "editor.cursorBlinking": "phase",
     "editor.cursorSmoothCaretAnimation": true,
