--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,6 @@
 {
     "workbench.colorTheme": "Gruvbox Material Soft Dark",
     "workbench.startupEditor": "newUntitledFile",
-    "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
     "explorer.confirmDragAndDrop": false,
     "explorer.confirmDelete": false,
     "editor.wordWrap": "on",
@@ -50,5 +49,9 @@
     "window.zoomLevel": 0,
     "editor.glyphMargin": true,
     "git.autofetch": true,
-    "workbench.iconTheme": "material-icon-theme"
+    "workbench.iconTheme": "material-icon-theme",
+
+    "terminal.integrated.shell.windows": "C:\\cygwin64\\bin\\fish.exe",
+    "php.validate.executablePath": "C:\\cygwin64\\bin\\php.exe",
+
 }
